# QChat

./: .rc.qrc.swp  Qchat.pro  README.md  empty_page.cpp  main.cpp  qchat_logo.icns  rc.qrc
chat_src/base/: global.cpp  global.h  singleton.h
chat_src/bubble/: BubbleFrame.cpp  BubbleFrame.h  PictureBubble.h  TextBubble.cpp  TextBubble.h  VideoBubble.cpp  VideoBubble.h
chat_src/custom_ui/: add_user_item.cpp  add_user_item.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  chat_page.cpp  chat_page.h  chat_user_wid.cpp  chat_user_wid.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.ui  conuser_item.cpp  conuser_item.h  empty_page.cpp  empty_page.h  emptypage.ui  findfaildlg.cpp  findfaildlg.h  findfaildlg.ui  findsuccessdlg.cpp  findsuccessdlg.h  findsuccessdlg.ui  friendinfopage.cpp  friendinfopage.h  friendinfopage.ui  friendlabel.cpp  friendlabel.h  friendlabel.ui  (+16 more)
chat_src/custom_ui_wid/: ChatItemBase.cpp  ChatItemBase.h  ChatView.h  MessageTextEdit.cpp  MessageTextEdit.h  apply_friend_list.cpp  apply_friend_list.h  chat_user_list.cpp  chat_user_list.h  clicked_btn.cpp  clicked_btn.h  clicked_label.cpp  clicked_label.h  clicked_once_label.cpp  clicked_once_label.h  contact_user_list.cpp  contact_user_list.h  customize_edit.cpp  customize_edit.h  list_item_base.cpp  list_item_base.h  search_list.cpp  search_list.h  state_label.cpp  state_label.h  state_widget.cpp  state_widget.h  video_player_widget.cpp  video_player_widget.h
chat_src/network_manager/: http_manager.cpp  http_manager.h  tcp_manager.cpp  tcp_manager.h
chat_src/user_manager/: user_data.cpp  user_data.h  userinfo_group.cpp  userinfo_group.h
player_images/icons/: install.icns
player_src/: player_main.cpp
player_src/include/: common.h  ffmpeg_common.h
player_src/media/: MediaCamera.cpp  MediaCamera.hpp  MediaCore.cpp  MediaCore.hpp  MediaFFmpeg.cpp  MediaFFmpeg.hpp  MediaFile.cpp  MediaFile.hpp  PacketQueue.cpp  PacketQueue.h
player_src/qt/: AVPlayerCore.cpp  AVPlayerCore.hpp  AVPlayerUtils.cpp  AVPlayerUtils.hpp  App.cpp  App.hpp  PlayMedia.cpp  PlayMedia.h
player_src/utils/: configutils.cpp  configutils.h  configutils.json
qml/: MainPage.qml  test.qml
qml/director/: DirectorMain.qml
qml/mediaplay/: Button.qml  CMsgBox.qml  FileOpen.qml  MediaPlayMain.qml  MyHandle.qml  menuBar.qml
server/: build_all.sh  rm_all.sh  todo.txt
server/chat_server/: CMakeLists.txt  build.sh  main.cpp
server/chat_server/src/config/: conf.cpp  conf.h
server/chat_server/src/grpc_client/: chat_grpc_client.cpp
server/chat_server/src/grpc_server/: chat_server_impl.cpp
server/chat_server/src/mysql_server/: mysql_dao.cpp  mysql_manager.cpp
server/chat_server/src/redis_server/: redis_manager.cpp  redis_manager.h
server/chat_server/src/tcp_server/: cserver.cpp  cserver.h  csession.cpp  logic_system.cpp
server/chat_server/src/user_mgr/: user_data.h  user_manager.cpp  user_manager.h
server/chat_server2/: CMakeLists.txt  main.cpp
server/chat_server2/src/grpc_client/: chat_grpc_client.cpp  chat_grpc_client.h
server/chat_server2/src/grpc_server/: chat_server_impl.cpp  chat_server_impl.h
server/chat_server2/src/mysql_server/: mysql_dao.h  mysql_manager.h
server/chat_server2/src/tcp_server/: csession.h  logic_system.cpp  logic_system.h  msg_node.h
server/conf/: chat_server.yaml  chat_server2.yaml  gate_server.yaml  status_server.yaml
server/gate_server/: CMakeLists.txt  main.cpp
server/gate_server/src/config/: conf.cpp  conf.h
server/gate_server/src/http_server/: c_server.cpp  c_server.h  http_connection.cpp  http_connection.h  logic_system.cpp  logic_system.h
server/gate_server/src/mysql_server/: mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h
server/gate_server/src/redis_server/: redis_manager.cpp
server/gate_server/src/status_client/: status_grpc_client.cpp  status_grpc_client.h
server/gate_server/src/verify_client/: verify_grpc_client.cpp  verify_grpc_client.h
server/server_base/: CMakeLists.txt  build.sh
server/server_base/src/: asio_iocontext_pool.cpp  grpc_connection_pool.tpp  message.pb.cc  mysql_connection_pool.cpp  redis_connection_pool.cpp
server/server_base/src/include/: asio_iocontext_pool.h  base.h  circle_que_lk.h  grpc_connection_pool.h  message.pb.h  mysql_connection_pool.h  redis_connection_pool.h  singleton.h
server/status_server/: CMakeLists.txt  main.cpp
server/status_server/src/config/: conf.cpp  conf.h
server/status_server/src/grpc_server/: status_server_impl.cpp  status_server_impl.h
server/status_server/src/mysql_server/: mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp
server/status_server/src/redis_server/: redis_manager.cpp  redis_manager.h
server/verify_server/: base.js  config.js  config.json  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
style/: style_sheet.qss
